# clever-install

./: .drone.yml  Cargo.toml  Containerfile  Dockerfile  README.md
.github/workflows/: build-container.yaml  build-version.yaml  container-latest.yaml  container-stable.yaml  container-version.yaml  tests.yaml  udeps_test.yaml
dockerfiles/: Dockerfile-nobase
example/: config.yaml
scripts/: download_clin.sh  download_dudo.sh  rename_releases.sh
src/: main.rs
