[package]
name = "dudo"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive", "env"] }
handlebars = "4.3.1"
env_logger = "0.10.0"
log = "0.4.17"
http = "0.2.8"
serde = { version = "1.0.126", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls"] }
